--- a/package.json
+++ b/package.json
@@ -67,11 +67,12 @@
     "ap-react-hooks": "^2.0.1",
     "ap-react-utils": "^1.0.5",
     "core-js": "^3.18.1",
+    "mapbox-gl": "^2.15.0",
     "maplibre-gl": "^3.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
-    "react-map-gl": "^7.1.3",
+    "react-map-gl": "^7.0.25",
     "styled-components": "^5.3.1",
     "tailor": "^2.1.1"
   },
