--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
-    "react-map-gl": "^7.0.25",
+    "react-map-gl": "7.0.25",
     "styled-components": "^5.3.1",
     "tailor": "^2.1.1"
   },
