--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "yargs": "^17.2.1"
   },
   "dependencies": {
+    "@apdata/core": "^0.1.0",
     "@radix-ui/react-popover": "^1.0.6",
     "ap-embed": "^1.1.0",
     "ap-interactive-assets": "^1.2.1",
@@ -75,7 +76,8 @@
     "react-is": "^17.0.2",
     "react-map-gl": "7.0.25",
     "styled-components": "^5.3.1",
-    "tailor": "^2.1.1"
+    "tailor": "^2.1.1",
+    "typescript": "^5.2.2"
   },
   "babel": {
     "presets": [
