--- a/package.json
+++ b/package.json
@@ -71,6 +71,10 @@
     "ap-react-hooks": "^2.0.1",
     "ap-react-utils": "^1.0.5",
     "core-js": "^3.18.1",
+    "d3-array": "^3.2.4",
+    "d3-scale": "^4.0.2",
+    "d3-selection": "^3.0.0",
+    "d3-shape": "^3.2.0",
     "mapbox-gl": "^2.15.0",
     "maplibre-gl": "^3.2.0",
     "react": "^17.0.2",
