--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "d3-scale": "^4.0.2",
     "d3-selection": "^3.0.0",
     "d3-shape": "^3.2.0",
+    "d3-transition": "^3.0.1",
     "mapbox-gl": "^2.15.0",
     "maplibre-gl": "^3.2.0",
     "react": "^17.0.2",
