--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "ap-react-utils": "^1.0.5",
     "core-js": "^3.18.1",
     "d3-array": "^3.2.4",
+    "d3-axis": "^3.0.0",
     "d3-scale": "^4.0.2",
     "d3-selection": "^3.0.0",
     "d3-shape": "^3.2.0",
