convert chart to ts

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   "dependencies": {
     "@apdata/core": "^0.1.0",
     "@radix-ui/react-popover": "^1.0.6",
+    "@types/d3": "^7.4.0",
     "@types/react": "^18.2.21",
     "@types/styled-components": "^5.1.26",
     "ap-embed": "^1.1.0",
